fixing mobile layout bugs

--- a/src/components/ChoiceGrid/Styles.module.scss
+++ b/src/components/ChoiceGrid/Styles.module.scss
@@ -19,10 +19,13 @@
 }
 
 .choiceGridContainer {
+  background: $white;
+}
+
+.choiceGridContainerOnHome {
   margin-top: -200px;
   z-index: 3;
   position: relative;
-  background: $white;
   @include mq("tablet") {
     margin-top: 0;
   }
