--- a/src/styles/Choice.module.scss
+++ b/src/styles/Choice.module.scss
@@ -91,13 +91,16 @@
 .bannerImg {
   display: flex;
   align-items: center;
+  align-content: center;
   margin: 10px auto 40px;
+
   @include mq("tablet") {
     margin: 0;
   }
 }
 
 .bannerImgShadow {
+  width: 100%;
   -webkit-filter: drop-shadow(0px 0px 62px rgba($black, 0.8));
   filter: drop-shadow(0px 0px 62px rgba($black, 0.8));
 }
@@ -396,7 +399,7 @@
 
 .tldr {
   background: $black;
-    background-image: linear-gradient(270deg, #2a4270 21%, #16243e 62%);
+  background-image: linear-gradient(270deg, #2a4270 21%, #16243e 62%);
 }
 
 .tldrInner {
